--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-
-flask/backend/__pycache__/solana_util.cpython-39.pyc
-flask/backend/__pycache__/__init__.cpython-39.pyc
-flask/backend/__pycache__/__init__.cpython-39.pyc
-flask/backend/__pycache__/__init__.cpython-39.pyc
-flask/backend/__pycache__/solana_search.cpython-39.pyc
-flask/backend/__pycache__/__init__.cpython-39.pyc
-flask/backend/__pycache__/solana_util.cpython-39.pyc
+flask/__pycache__/*
+flask/backend/__pycache__/*
